1.1
 * Added Always on Top and Opacity

1.0
 * Initial release