@@ -1,5 +1,6 @@
 1.1
  * Added Always on Top and Opacity
+ * Renamed Show/Hide and Enable/Disable to Visible and Enabled
 
 1.0
  * Initial release
